--- a/BambooTray.App/PopupView.xaml
+++ b/BambooTray.App/PopupView.xaml
@@ -1,13 +1,10 @@
-﻿<Window x:Class="BambooTray.PopupView"
+﻿<Window x:Class="BambooTray.App.PopupView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:tb="http://www.hardcodet.net/taskbar"
-        xmlns:local="clr-namespace:BambooTray.App"
-        Visibility="Hidden" ShowInTaskbar="False">
-    <Window.DataContext>
-        <local:PopupViewModel />
-    </Window.DataContext>
-    <tb:TaskbarIcon IconSource="Resources/bamboo.ico"
+        Visibility="Hidden" ShowInTaskbar="False" Icon="Images/bamboo.ico" WindowStyle="None" Width="10" Height="10">
+
+    <tb:TaskbarIcon IconSource="Images/bamboo.ico"
                     PopupActivation="LeftOrRightClick">
         <tb:TaskbarIcon.TrayPopup>
             <Border>
