--- a/BambooTray.App/PopupView.xaml
+++ b/BambooTray.App/PopupView.xaml
@@ -2,18 +2,43 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:tb="http://www.hardcodet.net/taskbar"
+        xmlns:buildstate="clr-namespace:BambooTray.App.Bamboo.Resources"
         Visibility="Hidden" ShowInTaskbar="False" Icon="Images/bamboo.ico" WindowStyle="None" Width="10" Height="10">
 
     <tb:TaskbarIcon IconSource="Images/bamboo.ico"
                     PopupActivation="LeftOrRightClick">
         <tb:TaskbarIcon.TrayPopup>
-            <Border>
-                <ListBox>
-                    <ListBox.ItemTemplate>
+            <Border BorderBrush="LightGray" BorderThickness="1">
+                <ItemsControl ItemsSource="{Binding BambooPlans}" Background="White">
+                    <ItemsControl.ItemTemplate>
                         <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Margin="10">
+                                <Ellipse Height="30" Width="30" Margin="0,0,10,0">
+                                    <Ellipse.Style>
+                                        <Style TargetType="{x:Type Ellipse}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Failed}">
+                                                    <Setter Property="Fill" Value="Red"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Successful}">
+                                                    <Setter Property="Fill" Value="Green"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Unknown}">
+                                                    <Setter Property="Fill" Value="DarkGray"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding IsBuilding}" Value="true">
+                                                    <Setter Property="Fill" Value="DodgerBlue"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Ellipse.Style>
+                                </Ellipse>
+                                <Label Content="{Binding ProjectName}" FontSize="16"/>
+                                <Label Content="{Binding BuildName}" FontSize="16"/>
+                            </StackPanel>
                         </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </Border>
         </tb:TaskbarIcon.TrayPopup>
     </tb:TaskbarIcon>
