--- a/BambooTray.App/PopupView.xaml
+++ b/BambooTray.App/PopupView.xaml
@@ -9,33 +9,41 @@
                     PopupActivation="LeftOrRightClick">
         <tb:TaskbarIcon.TrayPopup>
             <Border BorderBrush="LightGray" BorderThickness="1">
-                <ItemsControl ItemsSource="{Binding BambooPlans}" Background="White">
+                <ItemsControl ItemsSource="{Binding BambooPlans}" Background="White" AlternationCount="{Binding BambooPlans.Count}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal" Margin="10">
-                                <Ellipse Height="30" Width="30" Margin="0,0,10,0">
-                                    <Ellipse.Style>
-                                        <Style TargetType="{x:Type Ellipse}">
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Failed}">
-                                                    <Setter Property="Fill" Value="Red"/>
-                                                </DataTrigger>
-                                                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Successful}">
-                                                    <Setter Property="Fill" Value="Green"/>
-                                                </DataTrigger>
-                                                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Unknown}">
-                                                    <Setter Property="Fill" Value="DarkGray"/>
-                                                </DataTrigger>
-                                                <DataTrigger Binding="{Binding IsBuilding}" Value="true">
-                                                    <Setter Property="Fill" Value="DodgerBlue"/>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </Ellipse.Style>
-                                </Ellipse>
-                                <Label Content="{Binding ProjectName}" FontSize="16"/>
-                                <Label Content="{Binding BuildName}" FontSize="16"/>
-                            </StackPanel>
+                            <Button Cursor="Hand" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.OpenInBrowserCommand}"
+                                    CommandParameter="{Binding PlanKey}">
+                                <Button.Template>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <ContentPresenter />
+                                    </ControlTemplate>
+                                </Button.Template>
+                                <StackPanel Orientation="Horizontal" Margin="10">
+                                    <Ellipse Height="30" Width="30" Margin="0,0,10,0">
+                                        <Ellipse.Style>
+                                            <Style TargetType="{x:Type Ellipse}">
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Failed}">
+                                                        <Setter Property="Fill" Value="Red"/>
+                                                    </DataTrigger>
+                                                    <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Successful}">
+                                                        <Setter Property="Fill" Value="Green"/>
+                                                    </DataTrigger>
+                                                    <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Unknown}">
+                                                        <Setter Property="Fill" Value="DarkGray"/>
+                                                    </DataTrigger>
+                                                    <DataTrigger Binding="{Binding IsBuilding}" Value="true">
+                                                        <Setter Property="Fill" Value="DodgerBlue"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Ellipse.Style>
+                                    </Ellipse>
+                                    <Label Content="{Binding ProjectName}" FontSize="16"/>
+                                    <Label Content="{Binding BuildName}" FontSize="16"/>
+                                </StackPanel>
+                            </Button>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
