--- a/BambooTray.App/App.xaml
+++ b/BambooTray.App/App.xaml
@@ -1,7 +1,13 @@
 ﻿<Application x:Class="BambooTray.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:BambooTray.App">
     <Application.Resources>
-         
+         <DataTemplate DataType="{x:Type local:PopupViewModel}">
+             <local:PopupView />
+         </DataTemplate>
+         <DataTemplate DataType="{x:Type local:LoginViewModel}">
+             <local:LoginView />
+         </DataTemplate>
     </Application.Resources>
 </Application>
