--- a/BambooTray.App/LoginView.xaml
+++ b/BambooTray.App/LoginView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Bamboo Login" Height="180" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        Title="Bamboo Login" Height="180" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Loaded="WindowLoaded">
     <DockPanel>
         <TextBlock DockPanel.Dock="Top" TextWrapping="Wrap" Margin="5">The bamboo session has expired or was not found. Please login to renew your session.</TextBlock>
         <Grid DockPanel.Dock="Bottom">
@@ -22,12 +22,12 @@
             <TextBox Grid.Column="1" Grid.Row="0" Margin="5,5" Text="{Binding Username}" />
             <Label Grid.Column="0" Grid.Row="1" Content="Password"/>
             <PasswordBox Grid.Column="1" Grid.Row="1" Margin="5,5" Name="PasswordBox"
-                         PasswordChanged="PasswordBox_PasswordChanged" />
+                         PasswordChanged="PasswordChanged" />
             
             <Button VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="2" Content="Login" Margin="5" Padding="2" 
-                    Command="{Binding LoginCommand}" />
+                    Command="{Binding LoginCommand}" IsDefault="True" Click="LoginClick" />
             <Button VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="2" Content="Cancel" Margin="5" Padding="2" 
-                    Command="{Binding CancelCommand}" />
+                    Command="{Binding CancelCommand}" IsCancel="True" />
         </Grid>
     </DockPanel>
 </Window>
