--- a/BambooTray.App/PopupView.xaml
+++ b/BambooTray.App/PopupView.xaml
@@ -3,9 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:tb="http://www.hardcodet.net/taskbar"
         xmlns:buildstate="clr-namespace:BambooTray.App.Bamboo.Resources"
-        Visibility="Hidden" ShowInTaskbar="False" Icon="Images/bamboo.ico" WindowStyle="None" Width="10" Height="10" Closed="Window_Closed">
+        Visibility="Hidden" ShowInTaskbar="False" Icon="Images/bamboo.ico" WindowStyle="None" Width="10" Height="10" 
+        Closed="Window_Closed" Loaded="Window_Loaded">
 
-    <tb:TaskbarIcon IconSource="Images/bamboo.ico"
+    <tb:TaskbarIcon Name="TaskbarIcon"
+                    IconSource="Images/bamboo.ico"
                     PopupActivation="LeftClick"
                     MenuActivation="RightClick">
         <tb:TaskbarIcon.ContextMenu>
