Update icon depending on build state

--- a/BambooTray.App/PopupView.xaml
+++ b/BambooTray.App/PopupView.xaml
@@ -7,7 +7,7 @@
         Closed="Window_Closed" Loaded="Window_Loaded">
 
     <tb:TaskbarIcon Name="TaskbarIcon"
-                    IconSource="Images/bamboo.ico"
+                    IconSource="{Binding IconSource}"
                     PopupActivation="LeftClick"
                     MenuActivation="RightClick">
         <tb:TaskbarIcon.ContextMenu>
