--- a/BambooTray.App/LoginView.xaml
+++ b/BambooTray.App/LoginView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Bamboo Login" Height="180" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Loaded="WindowLoaded">
-    <DockPanel>
+    <DockPanel FocusManager.FocusedElement="{Binding ElementName=PasswordBox}">
         <TextBlock DockPanel.Dock="Top" TextWrapping="Wrap" Margin="5">The bamboo session has expired or was not found. Please login to renew your session.</TextBlock>
         <Grid DockPanel.Dock="Bottom">
             <Grid.ColumnDefinitions>
