--- a/BambooTray.App/App.xaml
+++ b/BambooTray.App/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:BambooTray.App">
     <Application.Resources>
          <DataTemplate DataType="{x:Type local:PopupViewModel}">
-             <local:PopupView />
+             <local:MainView />
          </DataTemplate>
          <DataTemplate DataType="{x:Type local:LoginViewModel}">
              <local:LoginView />
