--- a/BambooTray.App/LoginView.xaml
+++ b/BambooTray.App/LoginView.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Icon="Images/bamboo.ico"
         Title="Bamboo Login" Height="180" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Loaded="WindowLoaded">
     <DockPanel FocusManager.FocusedElement="{Binding ElementName=PasswordBox}">
-        <TextBlock DockPanel.Dock="Top" TextWrapping="Wrap" Margin="5">The bamboo session has expired or was not found. Please login to renew your session.</TextBlock>
+        <TextBlock DockPanel.Dock="Top" TextWrapping="Wrap" Margin="5">The session has expired or was not found. Please login to renew your session.</TextBlock>
         <Grid DockPanel.Dock="Bottom">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
