--- a/BambooTray.App/MainView.xaml
+++ b/BambooTray.App/MainView.xaml
@@ -13,6 +13,7 @@
                     MenuActivation="RightClick">
         <tb:TaskbarIcon.ContextMenu>
             <ContextMenu>
+                <MenuItem Header="Login" Command="{Binding LoginCommand}"/>
                 <MenuItem Header="Exit" Click="Exit_Click"/>
             </ContextMenu>
         </tb:TaskbarIcon.ContextMenu>
