--- a/BambooTray.App/App.xaml
+++ b/BambooTray.App/App.xaml
@@ -1,13 +1,15 @@
 ﻿<Application x:Class="BambooTray.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BambooTray.App">
+             xmlns:popup="clr-namespace:BambooTray.App.View.Popup"
+             xmlns:login="clr-namespace:BambooTray.App.View.Login"
+             xmlns:view="clr-namespace:BambooTray.App.View">
     <Application.Resources>
-         <DataTemplate DataType="{x:Type local:PopupViewModel}">
-             <local:MainView />
+         <DataTemplate DataType="{x:Type popup:PopupViewModel}">
+             <view:MainView />
          </DataTemplate>
-         <DataTemplate DataType="{x:Type local:LoginViewModel}">
-             <local:LoginView />
+         <DataTemplate DataType="{x:Type login:LoginViewModel}">
+             <login:LoginView />
          </DataTemplate>
     </Application.Resources>
 </Application>
