--- a/BambooTray.App/View/Login/LoginView.xaml
+++ b/BambooTray.App/View/Login/LoginView.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="BambooTray.App.LoginView"
+﻿<Window x:Class="BambooTray.App.View.Login.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" Icon="Images/bamboo.ico"
+        mc:Ignorable="d" Icon="../../Images/bamboo.ico"
         Title="Bamboo Login" Height="180" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Loaded="WindowLoaded">
     <DockPanel FocusManager.FocusedElement="{Binding ElementName=PasswordBox}">
         <TextBlock DockPanel.Dock="Top" TextWrapping="Wrap" Margin="5">The session has expired or was not found. Please login to renew your session.</TextBlock>
