--- a/BambooTray.App/View/MainView.xaml
+++ b/BambooTray.App/View/MainView.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="BambooTray.App.MainView"
+﻿<Window x:Class="BambooTray.App.View.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:BambooTray.App"
         xmlns:tb="http://www.hardcodet.net/taskbar"
+        xmlns:popup="clr-namespace:BambooTray.App.View.Popup"
         Visibility="Hidden" ShowInTaskbar="False" WindowStyle="None" 
-        Width="10" Height="10" Icon="Images/bamboo.ico"
+        Width="10" Height="10" Icon="../Images/bamboo.ico"
         Closed="Window_Closed" Loaded="Window_Loaded">
 
     <tb:TaskbarIcon Name="TaskbarIcon"
@@ -19,7 +19,7 @@
             </ContextMenu>
         </tb:TaskbarIcon.ContextMenu>
         <tb:TaskbarIcon.TrayPopup>
-            <local:PopupView DataContext="{Binding PopupViewModel}"/>
+            <popup:PopupView DataContext="{Binding PopupViewModel}"/>
         </tb:TaskbarIcon.TrayPopup>
     </tb:TaskbarIcon>
 </Window>
