--- a/BambooTray.App/View/Popup/PopupView.xaml
+++ b/BambooTray.App/View/Popup/PopupView.xaml
@@ -3,17 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:BambooTray.App"
              xmlns:buildstate="clr-namespace:BambooTray.App.Bamboo.Resources"
+             xmlns:popup="clr-namespace:BambooTray.App.View.Popup"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance local:PopupViewModelDesignData, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance popup:PopupViewModelDesignData, IsDesignTimeCreatable=True}"
              MinHeight="200" MinWidth="300">
-    
     <UserControl.Resources>
         <Storyboard x:Key="PlanBuilding" Name="BuildingAnimation">
             <DoubleAnimation Storyboard.TargetProperty="(RenderTransform).(RotateTransform.Angle)"
-                                                                                 Duration="0:0:1" From="0" To="180" RepeatBehavior="Forever"/>
+                                                                                 Duration="0:0:2" From="0" To="360" RepeatBehavior="Forever"/>
         </Storyboard>
+
+        <CollectionViewSource x:Key="GroupedPlans" Source="{Binding BambooPlans}">
+            <CollectionViewSource.GroupDescriptions>
+                <PropertyGroupDescription PropertyName="ProjectName"/>
+            </CollectionViewSource.GroupDescriptions>
+        </CollectionViewSource>
+        
+        <DataTemplate x:Key="GroupTemplate">
+            <Label Content="{Binding Name}" FontSize="14" FontWeight="Bold"/>
+        </DataTemplate>
 
         <Style x:Key="PlanListStyle" TargetType="ItemsControl" BasedOn="{StaticResource {x:Type ItemsControl}}">
             <Style.Triggers>
@@ -23,7 +32,7 @@
                             <ControlTemplate>
                                 <Grid Background="White">
                                     <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" 
-                                                       Text="No plans to display" FontSize="16"/>
+                                                       Text="No plans to display" FontSize="14"/>
                                 </Grid>
                             </ControlTemplate>
                         </Setter.Value>
@@ -32,39 +41,56 @@
             </Style.Triggers>
         </Style>
 
-        <Style x:Key="BuildStateStyle" TargetType="{x:Type Ellipse}">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Failed}">
-                    <Setter Property="Fill" Value="Red"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Successful}">
-                    <Setter Property="Fill" Value="Green"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Unknown}">
-                    <Setter Property="Fill" Value="DarkGray"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding IsBuilding}" Value="true">
-                    <Setter Property="Fill" Value="DodgerBlue"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding IsEnabled}" Value="false">
-                    <Setter Property="Fill" Value="Gray"/>
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-
         <Style x:Key="PathStyle" TargetType="{x:Type Path}">
+            <Setter Property="StrokeThickness" Value="2.5"/>
+            <Style.Resources>
+                <EllipseGeometry x:Key="Circle" Center="10, 10" RadiusX="9" RadiusY="9"/>
+            </Style.Resources>
             <Style.Triggers>
                 <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Failed}">
-                    <Setter Property="Data" Value="M 15,5 L 15,17 M 15,21 L 15,25"/>
+                    <Setter Property="Stroke" Value="Red"/>
+                    <Setter Property="Data">
+                        <Setter.Value>
+                            <GeometryGroup>
+                                <CombinedGeometry Geometry1="{StaticResource Circle}"/>
+                                <PathGeometry Figures="M 10,4 L 10,11 M 10,13 L 10,16"/>
+                            </GeometryGroup>
+                        </Setter.Value>
+                    </Setter>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Successful}">
-                    <Setter Property="Data" Value="M 8,15 L 13,20 L 22,10" />
+                    <Setter Property="Stroke" Value="Green"/>
+                    <Setter Property="Data">
+                        <Setter.Value>
+                            <GeometryGroup>
+                                <CombinedGeometry Geometry1="{StaticResource Circle}"/>
+                                <PathGeometry Figures="M 5,10 L 8,13 L 15,6"/>
+                            </GeometryGroup>
+                        </Setter.Value>
+                    </Setter>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding BuildState}" Value="{x:Static buildstate:BuildState.Unknown}">
-                    <Setter Property="Data" Value="M 22,8 L 8,22"/>
+                    <Setter Property="Stroke" Value="Gray"/>
+                    <Setter Property="Data">
+                        <Setter.Value>
+                            <GeometryGroup>
+                                <CombinedGeometry Geometry1="{StaticResource Circle}"/>
+                                <PathGeometry Figures="M 14,6 L 6,14"/>
+                            </GeometryGroup>
+                        </Setter.Value>
+                    </Setter>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding IsBuilding}" Value="true">
-                    <Setter Property="Data" Value="M 8,23 A 15,20 180 0 0 22,23 M 8,7 A 15,20 180 0 1 22,7"/>
+                    <Setter Property="Stroke" Value="DodgerBlue"/>
+                    <Setter Property="Data">
+                        <Setter.Value>
+                            <GeometryGroup>
+                                <CombinedGeometry Geometry1="{StaticResource Circle}"/>
+                                <PathGeometry Figures="M 6,14 A 5.6,5.6 180 0 0 14,14 
+                                                       M 6,6  A 5.6,5.6 180 0 1 14,6"/>
+                            </GeometryGroup>
+                        </Setter.Value>
+                    </Setter>
                     <DataTrigger.EnterActions>
                         <BeginStoryboard Storyboard="{StaticResource PlanBuilding}"/>
                     </DataTrigger.EnterActions>
@@ -73,36 +99,44 @@
                     </DataTrigger.ExitActions>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding IsEnabled}" Value="false">
-                    <Setter Property="Data" Value="M 8,15 L 22, 15"/>
+                    <Setter Property="Stroke" Value="Gray"/>
+                    <Setter Property="Data">
+                        <Setter.Value>
+                            <GeometryGroup>
+                                <CombinedGeometry Geometry1="{StaticResource Circle}"/>
+                                <PathGeometry Figures="M 5,10 L 15, 10"/>
+                            </GeometryGroup>
+                        </Setter.Value>
+                    </Setter>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
+
     </UserControl.Resources>
     
     <Border BorderBrush="LightGray" BorderThickness="1">
-        <ItemsControl ItemsSource="{Binding BambooPlans}" Background="White" AlternationCount="{Binding BambooPlans.Count}" 
+        <ItemsControl ItemsSource="{Binding Source={StaticResource GroupedPlans}}" Background="White" AlternationCount="{Binding BambooPlans.Count}" 
                       Style="{StaticResource PlanListStyle}">
+            <ItemsControl.GroupStyle>
+                <GroupStyle HeaderTemplate="{StaticResource GroupTemplate}"/>
+            </ItemsControl.GroupStyle>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Button Cursor="Hand" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.OpenInBrowserCommand}"
-                                    CommandParameter="{Binding PlanKey}">
+                            CommandParameter="{Binding PlanKey}">
                         <Button.Template>
                             <ControlTemplate TargetType="{x:Type Button}">
                                 <ContentPresenter />
                             </ControlTemplate>
                         </Button.Template>
-                        <StackPanel Orientation="Horizontal" Margin="10">
-                            <Grid Margin="0,0,10,0">
-                                <Ellipse Height="30" Width="30" Style="{StaticResource BuildStateStyle}" />
-                                <Path Stroke="White" StrokeThickness="3" Style="{StaticResource PathStyle}">
-                                    <Path.RenderTransform>
-                                        <RotateTransform Angle="0" CenterX="15" CenterY="15"/>
-                                    </Path.RenderTransform>
-                                </Path>
-                            </Grid>
-                            <Label Content="{Binding ProjectName}" FontSize="16"/>
-                            <Label Content="{Binding BuildName}" FontSize="16"/>
-                            <Label Content="{Binding RemainingTime}" FontSize="12" VerticalAlignment="Center"/>
+                        <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
+                            <Path Style="{StaticResource PathStyle}" VerticalAlignment="Center">
+                                <Path.RenderTransform>
+                                    <RotateTransform Angle="0" CenterX="10" CenterY="10"/>
+                                </Path.RenderTransform>
+                            </Path>
+                            <Label Content="{Binding BuildName}" FontSize="14"/>
+                            <Label Content="{Binding RemainingTime}" FontSize="10" VerticalAlignment="Center"/>
                         </StackPanel>
                     </Button>
                 </DataTemplate>
